--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,8 @@
            <p>
                 Feel free to contact me trough socials
                 <ul> 
-                <li><a href="https//www.twitch.tv/likeis">Twitch</a>
-                <a href="https://twitter.com/likeistwitch?lang=fi">Twitter</a></li>
+                <li><a href="https//www.twitch.tv/likeis" target="_blank">Twitch</a>
+                <a href="https://twitter.com/likeistwitch?lang=fi" target="_blank">Twitter</a></li>
                 </ul>
            </p>
         </aside>
