--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
            <p>
                 Feel free to contact me trough socials
                 <ul> 
-                <li><a href="https//www.twitch.tv/likeis" target="_blank">Twitch</a>
+                <li><a href="https://www.twitch.tv/likeis" target="_blank">Twitch</a>
                 <a href="https://twitter.com/likeistwitch?lang=fi" target="_blank">Twitter</a></li>
                 </ul>
            </p>
